# passman

./: .gitignore  ATTACK-REPORT.md  Cargo.toml  README.md  REVIEW.md  android-keystore-plan.md  architecture.md  deny.toml  install.sh  reproduce.sh
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-1-report.md  task-2-report.md  task-3-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-9-report.md  task-fix-report.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/kotlin/com/passman/app/: KeystoreBridgeInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/passman/app/: ClipboardBridgeImpl.kt  KeystoreBridgeImpl.kt  MainActivity.kt  QrCode.kt
android/app/src/main/res/values/: themes.xml
crates/passman-cli/: Cargo.toml
crates/passman-cli/src/: cli.rs  clipboard.rs  commands.rs  io.rs  lib.rs  main.rs  process.rs  prompter.rs
crates/passman-cli/tests/: cli.rs
crates/passman-core/: Cargo.toml
crates/passman-core/src/: app.rs  clipboard.rs  error.rs  lib.rs  lockout.rs  progress.rs  provisioning.rs  session.rs  storage.rs  unlocked.rs  worker.rs
crates/passman-core/tests/: core.rs
crates/passman-crypto/: Cargo.toml
crates/passman-crypto/src/: aead.rs  ct.rs  derive.rs  error.rs  kdf.rs  key.rs  lib.rs  rng.rs  secret.rs
crates/passman-crypto/tests/: kat.rs
crates/passman-gtk/: Cargo.toml
crates/passman-gtk/src/: clipboard.rs  lib.rs  main.rs  prompter.rs  session.rs  ui.rs
crates/passman-gtk/tests/: session.rs
crates/passman-hsm/: Cargo.toml
crates/passman-hsm/src/: android.rs  blob.rs  capabilities.rs  error.rs  handle.rs  lib.rs  mock.rs  prompt.rs  slot.rs  store.rs
crates/passman-hsm/src/linux/: mod.rs  secret_service.rs  select.rs  tpm2.rs
crates/passman-platform/: Cargo.toml
crates/passman-platform/src/: error.rs  lib.rs  paths.rs  settings.rs
crates/passman-policy/: Cargo.toml
crates/passman-policy/src/: charset.rs  entropy.rs  error.rs  generate.rs  lib.rs  policy.rs  validate.rs
crates/passman-policy/tests/: policy.rs
crates/passman-recovery/: Cargo.toml
crates/passman-recovery/fuzz/: Cargo.toml
crates/passman-recovery/fuzz/corpus/recovery_import/: README.md  bad_magic  full_header_empty_payload  header_below_floor_truncated  magic_only
crates/passman-recovery/fuzz/fuzz_targets/: recovery_import.rs
crates/passman-recovery/src/: error.rs  format.rs  kdf.rs  lib.rs  payload.rs  reader.rs
crates/passman-recovery/tests/: recovery_api.rs
crates/passman-totp/: Cargo.toml
crates/passman-totp/src/: config.rs  error.rs  hotp.rs  lib.rs  time.rs  verifier.rs
crates/passman-totp/tests/: rfc6238.rs
crates/passman-uniffi/: Cargo.toml
crates/passman-uniffi/src/: lib.rs
crates/passman-vault/: Cargo.toml
crates/passman-vault/fuzz/: Cargo.toml
crates/passman-vault/fuzz/corpus/vault_parse/: README.md  header_v1_truncated
crates/passman-vault/fuzz/fuzz_targets/: vault_parse.rs
crates/passman-vault/src/: error.rs  id.rs  index.rs  lib.rs  reader.rs  record.rs  vault.rs
crates/passman-vault/tests/: vault.rs
docs/: DEPENDENCIES.md  RELEASE.md
docs/superpowers/plans/: 2026-06-16-passman-app-shells.md
packaging/: passman.desktop
scripts/: check-boundaries.sh  smoke-cli-swtpm.sh
