[package]
name = "passman-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Headless orchestration: unlock/create pipelines, session lifecycle, atomic vault I/O, clipboard, reveal, export/import."

[dependencies]
passman-crypto = { path = "../passman-crypto" }
passman-totp = { path = "../passman-totp" }
passman-vault = { path = "../passman-vault" }
passman-hsm = { path = "../passman-hsm" }
passman-policy = { path = "../passman-policy" }
passman-recovery = { path = "../passman-recovery" }
postcard.workspace = true
base32.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
passman-hsm = { path = "../passman-hsm", features = ["mock"] }
# test-util exposes passman_recovery::export_unchecked so the integration tests
# can build a cheap recovery file and exercise App::import_recovery end-to-end
# without the 1 GiB recovery Floor. Dev-only (resolver v2 keeps it out of the
# normal build); production never enables it.
passman-recovery = { path = "../passman-recovery", features = ["test-util"] }
tempfile.workspace = true
# Test-only: the integration tests generate a valid TOTP code from the seed
# decoded out of the provisioning URI (passman-totp exposes only verification,
# not code generation). These reproduce RFC 4226 HOTP-SHA1 in the test harness;
# both are already workspace-pinned (used by passman-totp). Not a runtime dep.
hmac.workspace = true
sha1.workspace = true

[lints]
workspace = true
