[package]
name = "passman-gtk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Linux GTK4 desktop front-end for passman: a thin shell over passman-core with a TPM2/SecretService backend (§1.4)."

[[bin]]
name = "passman-gtk"
path = "src/main.rs"

[lib]
name = "passman_gtk"
path = "src/lib.rs"

[dependencies]
passman-core = { path = "../passman-core" }
passman-platform = { path = "../passman-platform" }
passman-crypto = { path = "../passman-crypto" }
passman-policy = { path = "../passman-policy" }
passman-totp = { path = "../passman-totp" }
passman-vault = { path = "../passman-vault" }
passman-hsm = { path = "../passman-hsm", features = ["tpm2", "secret-service"] }

gtk4 = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
# The session-actor logic is GTK-free and tested against the mock backend.
passman-hsm = { path = "../passman-hsm", features = ["tpm2", "secret-service", "mock"] }
passman-recovery = { path = "../passman-recovery" }
tempfile = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
base32 = { workspace = true }

[lints]
workspace = true
