[package]
name = "passman-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Per-platform path resolution (XDG/APPDATA/app-private) and the plaintext, non-secret settings.toml. No vault secrets ever pass through here."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
