[package]
name = "passman-uniffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "UniFFI binding surface for the Android (Kotlin) front-end over passman-core."

[lib]
crate-type = ["cdylib", "lib"]
name = "passman_uniffi"

[dependencies]
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
