[package]
name = "passman-vault"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Pure vault binary format: per-entry sealed envelopes, sealed index, parse/serialize to bytes. No I/O."

[dependencies]
passman-crypto = { path = "../passman-crypto" }
passman-policy = { path = "../passman-policy" }
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true
